# trabalho-3-2-dna-profiler-nnkfernandes

./: CMakeLists.txt  README.md
include/: CsvReader.hpp  Interface.hpp  Reader.hpp
src/: CsvReader.cpp  Interface.cpp  Reader.cpp  main.cpp  test.cpp
